resolving todos in ui
