# openapi.yaml
@@ -83,8 +83,8 @@ paths:
               schema:
                 type: integer
                 description: Id of currently active pattern
-        "404":
-          description: Not Found
+        "204":
+          description: Not Content
     put:
       description: Put new active pattern
       operationId: runPattern
@@ -108,8 +108,6 @@ paths:
       responses:
         "204":
           description: No Content
-        "404":
-          description: Not Found
   /server/shutdown:
     post:
       description: Shutdown server and hosting system
